<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/sentence_et"
        style="@style/EditTextStyle"
        android:autofillHints=""
        android:hint="@string/hintEditText"
        app:layout_constraintBottom_toTopOf="@+id/ignoredsymbols_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="153dp" />

    <EditText
        android:id="@+id/ignoredsymbols_et"
        style="@style/EditTextStyle"
        android:autofillHints=""
        android:hint="@string/hintEditText2"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentence_et"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="232dp" />


    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/hintResult"
        app:layout_constraintBottom_toTopOf="@+id/convert_btn"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ignoredsymbols_et"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="312dp" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_tv"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="376dp" />

</androidx.constraintlayout.widget.ConstraintLayout>